[package]
name = "tland-token"
version = "0.2.0"
authors = ["Jerzy Lasyk <jerzy.lasyk@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = { version = "0.9" }
cw2 = { version = "0.9" }
cw20 = { version = "0.9" }
cw20-base = { version = "0.9", features = ["library"]}
cw-storage-plus = { version = "0.9" }
cosmwasm-std = { version = "0.16.2" }
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
terra-cosmwasm = { version = "2.2" }
terraswap = { version = "2.4.0" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.2" }
